--------------------------------------------------------------------------------------------------
Release notes version 1.7.2_beta : Enhancements, modifications and corrected bugs since version 1.7.1 :
-------------------------------------------------------------------------------------------------
08/10/15 (TRUST)  Major change: With resume_last_time keyword in .data, tinit is set to last_time of saved files
05/10/15 (Kernel) Minor change: Option -without-doc added to the Kernel/TRUST configure tool (Do not build the documentation)
03/10/15 (TRUST)  Minor change: Update TRUST tutorial in latex version and its solutions
02/10/15 (TRUST)  New feature : Ability to use the chsom option of Sondes keyword with a Champ_Fonc_P1NC (eg moyenne_temperature)
01/10/15 (Tools)  Portability : Released version of Gnuplot is upgraded to 4.6.6
23/09/15 (Kernel) Minor change: Diagonal preconditionning is unavailable for a parallel calculation, the CG used to solve the implicitation of the equation diffusion operator can not preconditioned
17/08/15 (TRUST)  Bug fixed   : Correct the calculation of K for 2D in Boundary_field_uniform_keps_from_ud and Field_uniform_keps_from_ud
18/06/15 (TRUST)  Major change: Trio_U code becomes TRUST platform + TrioCFD baltilk
--------------------------------------------------------------------------------------------------
Release notes version 1.7.1 : Enhancements, modifications and corrected bugs since version 1.7.0 :
--------------------------------------------------------------------------------------------------
11/06/15 (Tools)  Portability : Released version of VisIt is upgraded to 2.9.1
09/06/15 (TRUST)  Portability : Linux distribution Fedora 22 and gcc 5.1 supported
09/06/15 (Kernel) Portability : Released Valgrind version updated to 3.10.1
03/06/15 (Kernel) Minor change: Option -disable-optionals added to the Kernel/TRUST configure tool (Disable all optionals librairies and tools)